--- a/templates/talk.html
+++ b/templates/talk.html
@@ -1,24 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://unpkg.com/htmx.org@1.9.6" integrity="sha384-FhXw7b6AlE/jyjlZH5iHa/tTe9EpJ1Y55RjcgPbjeWMskSxZt1v9qkxLJWNJaGni" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/htmx.org@1.9.6"
+        integrity="sha384-FhXw7b6AlE/jyjlZH5iHa/tTe9EpJ1Y55RjcgPbjeWMskSxZt1v9qkxLJWNJaGni"
+        crossorigin="anonymous"></script>
     <script src="https://unpkg.com/htmx.org/dist/ext/ws.js"></script>
-    <title>Talk</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.0.0/flowbite.min.css" rel="stylesheet" />
+    <title>Talk space</title>
 </head>
+
 <body>
-    <div class="talk-panel">
-        <div hx-ext="ws" ws-connect="/talk/">
-            <div id="notifications"></div>
-            <div id="chat_room">
-                
+    <!-- component -->
+    <div class="flex h-screen antialiased text-gray-800">
+        <div class="flex flex-row h-full w-full overflow-x-hidden">
+            <div class="flex flex-col py-8 pl-6 pr-2 w-64 bg-white flex-shrink-0">
+                <div class="flex flex-row items-center justify-center h-12 w-full">
+                    <div class="flex items-center justify-center rounded-2xl text-indigo-700 bg-indigo-100 h-10 w-10">
+                        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M8 10h.01M12 10h.01M16 10h.01M9 16H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-5l-5 5v-5z">
+                            </path>
+                        </svg>
+                    </div>
+                    <div class="ml-2 font-bold text-2xl">HTMX-Chat</div>
+                </div>
+                <div class="flex flex-col mt-8">
+                    <div class="flex flex-row items-center justify-between text-xs">
+                        <span class="font-bold">Active Conversations</span>
+                        <span class="flex items-center justify-center bg-gray-300 h-4 w-4 rounded-full">4</span>
+                    </div>
+                    <div class="flex flex-col space-y-1 mt-4 -mx-2 h-48 overflow-y-auto">
+                        <button class="flex flex-row items-center hover:bg-gray-100 rounded-xl p-2">
+                            <div class="flex items-center justify-center h-8 w-8 bg-indigo-200 rounded-full">
+                                H
+                            </div>
+                            <div class="ml-2 text-sm font-semibold">Henry Boyd</div>
+                        </button>
+                        <button class="flex flex-row items-center hover:bg-gray-100 rounded-xl p-2">
+                            <div class="flex items-center justify-center h-8 w-8 bg-gray-200 rounded-full">
+                                M
+                            </div>
+                            <div class="ml-2 text-sm font-semibold">Marta Curtis</div>
+                            <div
+                                class="flex items-center justify-center ml-auto text-xs text-white bg-red-500 h-4 w-4 rounded leading-none">
+                                2
+                            </div>
+                        </button>
+                        <button class="flex flex-row items-center hover:bg-gray-100 rounded-xl p-2">
+                            <div class="flex items-center justify-center h-8 w-8 bg-orange-200 rounded-full">
+                                P
+                            </div>
+                            <div class="ml-2 text-sm font-semibold">Philip Tucker</div>
+                        </button>
+                        <button class="flex flex-row items-center hover:bg-gray-100 rounded-xl p-2">
+                            <div class="flex items-center justify-center h-8 w-8 bg-pink-200 rounded-full">
+                                C
+                            </div>
+                            <div class="ml-2 text-sm font-semibold">Christine Reid</div>
+                        </button>
+                        <button class="flex flex-row items-center hover:bg-gray-100 rounded-xl p-2">
+                            <div class="flex items-center justify-center h-8 w-8 bg-purple-200 rounded-full">
+                                J
+                            </div>
+                            <div class="ml-2 text-sm font-semibold">Jerry Guzman</div>
+                        </button>
+                    </div>
+                </div>
+                <div class="flex flex-col mt-8">
+                    <div class="flex flex-row items-center justify-between text-xs">
+                        <span class="font-bold">Active Communities</span>
+                        <span class="flex items-center justify-center bg-gray-300 h-4 w-4 rounded-full">4</span>
+                    </div>
+                    <div class="flex flex-col space-y-1 mt-4 -mx-2 h-48 overflow-y-auto">
+                        {% for group in groups %}
+                        <button class="flex flex-row items-center hover:bg-gray-100 rounded-xl p-2">
+                            <div class="flex items-center justify-center h-8 w-8 bg-gray-200 rounded-full">
+                                {{forloop.counter}}
+                            </div>
+                            <div class="ml-2 text-sm font-semibold">{{group.name}}</div>
+                            <div
+                                class="flex items-center justify-center ml-auto text-xs text-white bg-red-500 h-4 w-4 rounded leading-none">
+                                {{group.get_online_count}}
+                            </div>
+                        </button>
+                        {% endfor %}
+                    </div>
+                </div>
             </div>
-            <form id="form" ws-send>
-                <input name="chat_message">
-            </form>
+            <div class="flex flex-col flex-auto h-full p-6">
+                <div class="flex flex-col flex-auto flex-shrink-0 rounded-2xl bg-gray-100 h-full p-4" hx-ext="ws" ws-connect="/talk/">
+                    <div class="flex flex-col h-full overflow-x-auto mb-4">
+                        <div class="flex flex-col h-full">
+                            <div class="grid grid-cols-12 gap-y-2">
+                                <div class="col-start-1 col-end-8 p-3 rounded-lg" id="chat-room" >
+                                    {% for message in messages %}
+                                    <div class="flex flex-row items-center mt-3" >
+
+                                        <div
+                                            class="flex items-center justify-center h-10 w-10 rounded-full bg-indigo-500 flex-shrink-0">
+                                            {{message.user}}
+                                        </div>
+                                        <div class="relative ml-3 text-sm bg-white py-2 px-4 shadow rounded-xl">
+                                            <div>{{message.content}}</div>
+                                        </div>
+
+                                    </div>
+                                    {% endfor %}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flex flex-row items-center h-16 rounded-xl bg-white w-full px-4">
+                        <div class="flex-grow ml-4">
+                            <div class="relative w-full">
+                                <form id="chat-form" class="w-100">
+                                    <input type="text"
+                                        class="flex w-full border rounded-xl focus:outline-none focus:border-indigo-300 pl-4 h-10 w-100" name="message" placeholder="chat here"/>
+                                    <button ws-send
+                                        class="absolute flex items-center justify-center h-full w-12 right-0 top-0 text-gray-400 hover:text-gray-600">
+                                        <svg class="w-4 h-4 transform rotate-45 -mt-px" fill="none"
+                                            stroke="currentColor" viewBox="0 0 24 24"
+                                            xmlns="http://www.w3.org/2000/svg">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                d="M12 19l9 2-9-18-9 18 9-2zm0 0v-8"></path>
+                                        </svg>
+                                    </button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.0.0/flowbite.min.js"></script>
 </body>
+
 </html>
