refactor: changed chatting UI

--- a/templates/chats.html
+++ b/templates/chats.html
@@ -11,10 +11,26 @@
     </button>
 </form>
 
-
-<div class="col-start-1 col-end-8 p-3 rounded-lg" id="chat-room" hx-swap-oob="true">
+<div class="col-start-1 col-end-8 p-3 rounded-lg" id="chat-room"  hx-swap-oob="true">
     {% for message in messages %}
-    <div class="flex flex-row items-center mt-3" >
+    {% if message.user != request.user %}
+    <div class="col-start-6 col-end-13 p-3 rounded-lg mt-4">
+        <div class="flex items-center justify-start flex-row-reverse">
+            <div
+                class="flex items-center justify-center h-10 w-10 rounded-full bg-indigo-500 flex-shrink-0">
+                {{message.user}}
+            </div>
+            <div
+                class="relative mr-3 text-sm bg-indigo-100 py-2 px-4 shadow rounded-xl">
+                <div>{{message.content}}</div>
+                <div class="absolute text-xs bottom-0 right-0 -mb-5 mr-2 text-gray-500">
+                    {{message.timestamp|time}}
+                </div>
+            </div>
+        </div>
+    </div>
+    {% else %}
+    <div class="flex flex-row items-center mt-4">
 
         <div
             class="flex items-center justify-center h-10 w-10 rounded-full bg-indigo-500 flex-shrink-0">
@@ -22,8 +38,12 @@
         </div>
         <div class="relative ml-3 text-sm bg-white py-2 px-4 shadow rounded-xl">
             <div>{{message.content}}</div>
+            <div class="absolute text-xs bottom-0 right-0 -mb-5 mr-2 text-gray-500">
+                {{message.timestamp|time}}
+            </div>
         </div>
 
     </div>
+    {% endif %}
     {% endfor %}
 </div>
