--- a/templates/talk.html
+++ b/templates/talk.html
@@ -1,18 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://unpkg.com/htmx.org@1.9.6"
-        integrity="sha384-FhXw7b6AlE/jyjlZH5iHa/tTe9EpJ1Y55RjcgPbjeWMskSxZt1v9qkxLJWNJaGni"
-        crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/htmx.org/dist/ext/ws.js"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.0.0/flowbite.min.css" rel="stylesheet" />
-    <title>Talk space</title>
-</head>
-
-<body>
+{% extend "base.html" %}
+{% block main %}
     <!-- component -->
     <div class="flex h-screen antialiased text-gray-800">
         <div class="flex flex-row h-full w-full overflow-x-hidden">
@@ -30,7 +17,7 @@
                 </div>
                 <div class="flex flex-col mt-8">
                     <div class="flex flex-row items-center justify-between text-xs">
-                        <span class="font-bold">Active Conversations</span>
+                        <span class="font-bold">Friends</span>
                         <span class="flex items-center justify-center bg-gray-300 h-4 w-4 rounded-full">4</span>
                     </div>
                     <div class="flex flex-col space-y-1 mt-4 -mx-2 h-48 overflow-y-auto">
@@ -77,7 +64,9 @@
                     </div>
                     <div class="flex flex-col space-y-1 mt-4 -mx-2 h-48 overflow-y-auto">
                         {% for group in groups %}
-                        <button class="flex flex-row items-center hover:bg-gray-100 rounded-xl p-2">
+                        <button class="flex flex-row items-center hover:bg-gray-100 rounded-xl p-2"
+                            hx-post="{% url 'group' group.id %}" hx-target="#chat-window"
+                            hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
                             <div class="flex items-center justify-center h-8 w-8 bg-gray-200 rounded-full">
                                 {{forloop.counter}}
                             </div>
@@ -91,53 +80,9 @@
                     </div>
                 </div>
             </div>
-            <div class="flex flex-col flex-auto h-full p-6">
-                <div class="flex flex-col flex-auto flex-shrink-0 rounded-2xl bg-gray-100 h-full p-4" hx-ext="ws" ws-connect="/talk/">
-                    <div class="flex flex-col h-full overflow-x-auto mb-4">
-                        <div class="flex flex-col h-full">
-                            <div class="grid grid-cols-12 gap-y-2">
-                                <div class="col-start-1 col-end-8 p-3 rounded-lg" id="chat-room" >
-                                    {% for message in messages %}
-                                    <div class="flex flex-row items-center mt-3" >
+            <div class="flex flex-col flex-auto h-full p-6" id="chat-window">
 
-                                        <div
-                                            class="flex items-center justify-center h-10 w-10 rounded-full bg-indigo-500 flex-shrink-0">
-                                            {{message.user}}
-                                        </div>
-                                        <div class="relative ml-3 text-sm bg-white py-2 px-4 shadow rounded-xl">
-                                            <div>{{message.content}}</div>
-                                        </div>
-
-                                    </div>
-                                    {% endfor %}
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="flex flex-row items-center h-16 rounded-xl bg-white w-full px-4">
-                        <div class="flex-grow ml-4">
-                            <div class="relative w-full">
-                                <form id="chat-form" class="w-100">
-                                    <input type="text"
-                                        class="flex w-full border rounded-xl focus:outline-none focus:border-indigo-300 pl-4 h-10 w-100" name="message" placeholder="chat here"/>
-                                    <button ws-send
-                                        class="absolute flex items-center justify-center h-full w-12 right-0 top-0 text-gray-400 hover:text-gray-600">
-                                        <svg class="w-4 h-4 transform rotate-45 -mt-px" fill="none"
-                                            stroke="currentColor" viewBox="0 0 24 24"
-                                            xmlns="http://www.w3.org/2000/svg">
-                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                                d="M12 19l9 2-9-18-9 18 9-2zm0 0v-8"></path>
-                                        </svg>
-                                    </button>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.0.0/flowbite.min.js"></script>
-</body>
-
-</html>
+{% endblock main %}
