--- a/templates/talk.html
+++ b/templates/talk.html
@@ -1,4 +1,4 @@
-{% extend "base.html" %}
+{% extends "base.html" %}
 {% block main %}
     <!-- component -->
     <div class="flex h-screen antialiased text-gray-800">
